regression-tests/test-results/clang-15-c++20-libcpp/mixed-function-expression-with-repeated-capture.cpp.output
mixed-function-expression-with-repeated-capture.cpp2:13:18: error: no member named 'for_each' in namespace 'std::ranges'
    std::ranges::for_each
    ~~~~~~~~~~~~~^
mixed-function-expression-with-repeated-capture.cpp2:17:18: error: no member named 'for_each' in namespace 'std::ranges'
    std::ranges::for_each(vec, cpp2::move(callback));
    ~~~~~~~~~~~~~^
2 errors generated.
